--- a/src/static/style/mixin.scss
+++ b/src/static/style/mixin.scss
@@ -1,5 +1,8 @@
-// 混合器
+/*
+ *混合器
+ */
 
+// 头像
 @mixin avatar-img($width, $height) {
     width: $width;
     height: $height;
@@ -7,4 +10,11 @@
     display: block;
     object-fit: cover;
     background: #e8e8e8;
+}
+// 居中
+@mixin left-top-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
