--- a/src/static/style/mixin.scss
+++ b/src/static/style/mixin.scss
@@ -13,7 +13,7 @@
 }
 // 居中
 @mixin left-top-center {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
