--- a/src/static/style/theme.scss
+++ b/src/static/style/theme.scss
@@ -16,7 +16,5 @@ $danger: #ff5b5b;
 $error: #ff1839;
 $border: #eee;
 $active: #f4f7ff;
-$background: #272c36;
-$background-deep: #19202f;
-$shadow: rgba($color: $main, $alpha: 0.2);
+$shadow: rgba($color: $main, $alpha: .2);
 
