--- a/src/static/style/reset.scss
+++ b/src/static/style/reset.scss
@@ -1,7 +1,6 @@
 @import './theme';
 @import './iconfont.css';
 @import './mixin';
-
 * {
     margin: 0;
     padding: 0;
@@ -15,16 +14,16 @@ html {
     height: 100%;
 }
 
-li { list-style: none; }
+li {
+    list-style: none;
+}
 
 // color & background-color
 @each $name,
-$color in (black: $black, white: $white, white-slow: $white-slow, basic: $basic, second: $second, main: $main,
-    main-slow: $main-slow, main-deep: $main-deep, success: $success, warning: $warning, danger: $danger, error: $error, active: $active) {
+$color in (black: $black, white: $white, white-slow: $white-slow, basic: $basic, second: $second, main: $main, main-slow: $main-slow, main-deep: $main-deep, success: $success, warning: $warning, danger: $danger, error: $error, active: $active) {
     .color-#{ '' + $name } {
         color: $color;
-   }
-
+    }
     .back-color-#{ '' + $name } {
         background-color: $color;
     }
@@ -42,49 +41,80 @@ $color in (black: $black, white: $white, white-slow: $white-slow, basic: $basic,
     .mt-#{$i * 10} {
         margin-top: $i * 10px;
     }
-
     .mr-#{$i * 10} {
         margin-right: $i * 10px;
     }
-
     .mb-#{$i * 10} {
         margin-bottom: $i * 10px;
     }
-
     .ml-#{$i * 10} {
         margin-left: $i * 10px;
     }
 }
 
+
 /*  布局 */
 
 // flex
-.flex { display: flex; }
+.flex {
+    display: flex;
+}
 
-.flex-warp { flex-wrap: wrap };
+.flex-warp {
+    flex-wrap: wrap
+}
 
-.space-between { justify-content: space-between; }
+;
+.space-between {
+    justify-content: space-between;
+}
 
-.flex-center { justify-content: center; }
+.flex-center {
+    justify-content: center;
+}
 
-.flex-start { justify-content: flex-start; }
+.flex-start {
+    justify-content: flex-start;
+}
 
-.flex-end { justify-content: flex-end; }
+.flex-end {
+    justify-content: flex-end;
+}
 
-.flex-column-center { align-items: center; }
+.flex-column-center {
+    align-items: center;
+}
 
-.flex-column { flex-flow: column; }
+.flex-column {
+    flex-flow: column;
+}
 
-.flex-1 { flex: 1; }
+.flex-1 {
+    flex: 1;
+}
+
 
 /* layout */
-.bold { font-weight: bold; }
 
-.radius-4 { border-radius: 4px; }
-.radius-10 { border-radius: 10px; }
-.radius-20 { border-radius: 20px; }
+.bold {
+    font-weight: bold;
+}
 
-.relative { position: relative; }
+.radius-4 {
+    border-radius: 4px;
+}
+
+.radius-10 {
+    border-radius: 10px;
+}
+
+.radius-20 {
+    border-radius: 20px;
+}
+
+.relative {
+    position: relative;
+}
 
 // 全屏居中
 .left-top-center {
@@ -96,9 +126,13 @@ $color in (black: $black, white: $white, white-slow: $white-slow, basic: $basic,
 }
 
 // 主题色外发光
-.theme-shadow { box-shadow: 0 0 4px 4px $main; }
+.theme-shadow {
+    box-shadow: 0 0 4px 4px $main;
+}
+
 
 /* 超出隐藏 */
+
 // 单行省略
 .text-hidden {
     width: 100%;
@@ -106,6 +140,7 @@ $color in (black: $black, white: $white, white-slow: $white-slow, basic: $basic,
     overflow: hidden;
     white-space: nowrap;
 }
+
 // 两行省略
 .text-hidden-2 {
     text-overflow: ellipsis;
@@ -116,41 +151,47 @@ $color in (black: $black, white: $white, white-slow: $white-slow, basic: $basic,
 }
 
 // 按钮默认样式
-button {
-    display: inline-block;
-    border-radius: 4px;
-    outline: 0;
-    box-sizing: content-box;
-    background-color: transparent;
-    border: 1px solid $main;
-    padding:10px 25px;
-    letter-spacing: 1px;
-    // cursor: pointer;
-    color: $main;
-    &[type="primary"] {
-        background: $main;
-        color: $white;
-    }
-    &::before,
-    &::after {
-        border: 0;
-        outline: 0;
-    }
-
-    // 点击反馈
-    &:active {
-        filter: brightness(0.8);
-        transform: scale(.95);
-    }
-}
-
+// button {
+//     display: inline-block;
+//     border-radius: 4px;
+//     outline: 0;
+//     box-sizing: content-box;
+//     background-color: transparent;
+//     border: 1px solid $main;
+//     padding: 10px 25px;
+//     letter-spacing: 1px;
+//     // cursor: pointer;
+//     color: $main;
+//     // &[type="primary"] {
+//     //     background: $main;
+//     //     color: $white;
+//     // }
+//     &::before,
+//     &::after {
+//         border: 0;
+//         outline: 0;
+//     }
+//     // 点击反馈
+//     &:active {
+//         filter: brightness(0.8);
+//         transform: scale(.95);
+//     }
+// }
 // mask 遮罩
-.mask { position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .5); z-index: 9; }
+.mask {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 9;
+}
 
 // 交互反馈
 .pointer {
     cursor: pointer;
-    :active {
+     :active {
         filter: brightness(.8);
     }
 }
