--- a/src/static/style/theme.scss
+++ b/src/static/style/theme.scss
@@ -7,8 +7,8 @@ $white: #fff;
 $white-slow: #c6c7e0;
 $basic: #666;
 $second: #9598b7;
-$main: #496fff;
-$main-slow: #88a1ff;
+$main: #FFAB0A;
+$main-slow: #BDBDBD;
 $main-deep: #181677;
 $success: #3bba7c;
 $warning: #ffcc00;
@@ -18,4 +18,3 @@ $border: #eee;
 $active: #f4f7ff;
 $shadow: rgba($color: $main, $alpha: .2);
 $page-bg: #f5f5f5;
-
