--- a/src/static/style/theme.scss
+++ b/src/static/style/theme.scss
@@ -6,7 +6,7 @@ $black: #333;
 $white: #fff;
 $white-slow: #c6c7e0;
 $basic: #666;
-$second: #9598b7;
+$second: #FFE9BE;
 $main: #FFAB0A;
 $main-slow: #BDBDBD;
 $main-deep: #181677;
