--- a/src/static/style/theme.scss
+++ b/src/static/style/theme.scss
@@ -16,6 +16,8 @@ $danger: #ff5b5b;
 $error: #ff1839;
 $border: #eee;
 $active: #f4f7ff;
-$shadow: rgba($color: $main, $alpha: .2);
+$shadow: rgba(
+  $color: $main,
+  $alpha: 0.2
+);
 $page-bg: #f5f5f5;
-
